--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         Department "Information and intellectual property"
         faculty "Computer and information technology" National technical university "Kharkiv polytechnical institute"
     </div>
+    <p>This is new line</p>
 </body>
 </html>
